name:                Railway
version:             0.1.0.1
synopsis:            Zero-dependency pipe operators
description:         Please see README.md
homepage:            https://github.com/rgscherf/railway#readme
license:             MIT
license-file:        LICENSE
author:              Robert Scherf
maintainer:          rgscherf@gmail.com
copyright:           2016 Robert Scherf
category:            Utilities
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Railway
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- executable railway-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , railway
--   default-language:    Haskell2010

test-suite railway-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Railway
                     , hspec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rgscherf/railway
